# smart-mail-template

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  mac_run_smart_mail.sh  pyproject.toml  requirements.txt  time_spent.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .intents_registry.py.swp  .schema.py.swp  .schema_generated.py.swp  __init__.py  autodetect_rules.generated.py  autodetect_rules_generated.py  intents_registry.py  main.py  preprocess.py  schema.py  schema_generated.py
configs/: intents.json  rules.json
data/: emails.csv  emails.filtered.csv  emails.labeled.csv  emails.labeled.train.csv  emails.labeled.val.csv
model/: train.py
public/: schema.generated.json
scripts/: docpush.sh  eval_autodetect.py  filter_csv.py  gitpush.sh  ingest_example.py  intent_model.py  mbox_to_csv.py  mine_low_confidence.py  new_intent.py  patch_templates_tone.py  regen_schemas.py  render_preview.py  split_train_val.py  validate_repo.py
templates/: _tone_macros.j2  aerospace_mro_return_authorization.j2  delay_notice.j2  followup.j2  invoice_payment.j2  invoice_po_followup.j2  order_confirmation.j2  order_request.j2  packing_slip_docs.j2  qb_order.j2  quote_request.j2  shipment_update.j2  tax_exempt_certificate.j2  tax_exemption.j2
tests/: test_api.py  test_registry_valid.py
ui/: app.js  data.js  generate.js  index OLD.html  index.html  intents.grid.js  legacy_styles.css  settings.js  styles.css  user_templates.js
(+101 files in other folders)
