[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smart-mail-template"           
version = "0.1.0"
description = "FastAPI app with autodetect + templating"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "All right reserved" }             
authors = [{ name = "John Stancel" }]

# Runtime dependencies (from requirements.txt)
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "joblib>=1.4.0",
  "typer>=0.12.3",
  "questionary>=2.0.1",
  "rich>=13.7.1",
]

[project.optional-dependencies]
# Install with: pip install -e .[dev]
dev = [
  "pytest>=8.2.0",
  "black>=24.8.0",
  "flake8>=7.1.0",
  "pre-commit>=3.8.0",
]

[project.urls]
homepage = "https://github.com/jhstancel/smart-mail-template"
repository = "https://github.com/jhstancel/smart-mail-template"

